[gd_scene load_steps=48 format=2]

[ext_resource path="res://Scripts/Generic/Camera2D.gd" type="Script" id=1]
[ext_resource path="res://Scenes/VMM/VMM.gd" type="Script" id=2]
[ext_resource path="res://Scenes/VMM/VMMUIManagerScn.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Medals/MedalSlot.gd" type="Script" id=4]
[ext_resource path="res://Assets/Backgrounds/Skull_Background.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/Menu/shovel_cursor.png" type="Texture" id=6]
[ext_resource path="res://Assets/VivoView/medals/Team_Holder.png" type="Texture" id=7]
[ext_resource path="res://Scenes/VivoView/VivoView.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/UI/UISpace/UICursor.gd" type="Script" id=9]
[ext_resource path="res://Scenes/VMM/ShiftButtons.gd" type="Script" id=10]
[ext_resource path="res://Scripts/UI/UISpace/UIItem.gd" type="Script" id=11]
[ext_resource path="res://Assets/VivoView/medals/shift_left.png" type="Texture" id=12]
[ext_resource path="res://Assets/VivoView/medals/shift_right.png" type="Texture" id=13]
[ext_resource path="res://Assets/SFX/VMM/shift_grid.wav" type="AudioStream" id=14]
[ext_resource path="res://Fonts/Resource/FFBasicFont.tres" type="Theme" id=15]
[ext_resource path="res://Scripts/Generic/MusicLoop.gd" type="Script" id=16]
[ext_resource path="res://Assets/VivoView/tab/Sort/Sort_Index.png" type="Texture" id=17]
[ext_resource path="res://Assets/Music/03_Kaseki A_T_M_.wav" type="AudioStream" id=18]
[ext_resource path="res://Assets/VivoView/buttons/FFForward.png" type="Texture" id=19]
[ext_resource path="res://Assets/VivoView/tab/Sort/Sort_LP.png" type="Texture" id=20]
[ext_resource path="res://Assets/VivoView/tab/Sort/Sort_Name.png" type="Texture" id=21]
[ext_resource path="res://Assets/VivoView/tab/Sort/Sort_Element.png" type="Texture" id=22]
[ext_resource path="res://Assets/VivoView/tab/Sort/Sort_Size.png" type="Texture" id=23]
[ext_resource path="res://Assets/VivoView/tab/Sort/Sort_Type.png" type="Texture" id=24]
[ext_resource path="res://Assets/VivoView/tab/Sort/Sort_Total_FP.png" type="Texture" id=25]
[ext_resource path="res://Assets/VivoView/tab/Sort/Sort_SupportType.png" type="Texture" id=26]
[ext_resource path="res://Scenes/VMM/SortButton.gd" type="Script" id=27]
[ext_resource path="res://Assets/VivoView/buttons/FFOK.png" type="Texture" id=28]
[ext_resource path="res://Assets/VivoView/buttons/FFPrev.png" type="Texture" id=29]
[ext_resource path="res://Assets/VivoView/buttons/FFBack.png" type="Texture" id=30]
[ext_resource path="res://Assets/VivoView/buttons/FFClear.png" type="Texture" id=31]
[ext_resource path="res://Assets/VivoView/buttons/FFLoad.png" type="Texture" id=32]
[ext_resource path="res://Assets/VivoView/buttons/FFSave.png" type="Texture" id=33]
[ext_resource path="res://Assets/VivoView/tab/Sort/Sort_Defense.png" type="Texture" id=34]
[ext_resource path="res://Assets/VivoView/tab/Sort/Sort_Attack.png" type="Texture" id=35]
[ext_resource path="res://Assets/VivoView/tab/Sort/Sort_Accuracy.png" type="Texture" id=36]
[ext_resource path="res://Assets/VivoView/tab/Sort/Sort_Evasion.png" type="Texture" id=37]
[ext_resource path="res://Scenes/VMM/TeamName.gd" type="Script" id=38]
[ext_resource path="res://Scenes/VMM/FunctionBarButton.gd" type="Script" id=39]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("UICursor:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "cursor"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UICursor:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2, 0 ), Vector2( 2, 0 ), Vector2( -2, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ShiftLeft:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 0 ), Vector2( -2, 0 ), Vector2( 2, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Select"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ShiftLeft:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 0 ), Vector2( -2, 0 ), Vector2( 2, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ShiftRight:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2, 0 ), Vector2( 2, 0 ), Vector2( -2, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Select"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ShiftRight:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2, 0 ), Vector2( 2, 0 ), Vector2( -2, 0 ) ]
}

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="VMM" type="Node2D"]
position = Vector2( 0, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
script = ExtResource( 16 )

[node name="SkullBackground" type="Sprite" parent="."]
modulate = Color( 0.866667, 0.866667, 0.866667, 1 )
position = Vector2( 0, -55 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
centered = false

[node name="TeamHolder" type="Sprite" parent="."]
position = Vector2( 263, 3 )
texture = ExtResource( 7 )
centered = false

[node name="VivoView" parent="." instance=ExtResource( 8 )]
position = Vector2( 3, 3 )

[node name="UI" type="Node2D" parent="."]
script = ExtResource( 3 )
focused = false

[node name="UICursorOscillate" type="AnimationPlayer" parent="UI"]
anims/RESET = SubResource( 7 )
anims/cursor = SubResource( 8 )

[node name="UICursor" type="Sprite" parent="UI"]
z_index = 4
texture = ExtResource( 6 )
script = ExtResource( 9 )

[node name="ShiftButtons" type="Node2D" parent="UI"]
position = Vector2( 274, 259 )
script = ExtResource( 10 )

[node name="ShiftLeft" type="Sprite" parent="UI/ShiftButtons"]
texture = ExtResource( 12 )
offset = Vector2( 2, 0 )
script = ExtResource( 11 )
cursor_offset = Vector2( 3, 12 )
cursor_rotation = -1.571

[node name="ShiftRight" type="Sprite" parent="UI/ShiftButtons"]
position = Vector2( 218, 0 )
texture = ExtResource( 13 )
offset = Vector2( -2, 0 )
script = ExtResource( 11 )
cursor_offset = Vector2( 3, 12 )
cursor_rotation = -1.571

[node name="Sound" type="AudioStreamPlayer" parent="UI/ShiftButtons"]
stream = ExtResource( 14 )

[node name="AniLeft" type="AnimationPlayer" parent="UI/ShiftButtons"]
anims/Idle = SubResource( 1 )
anims/Select = SubResource( 2 )

[node name="AniRight" type="AnimationPlayer" parent="UI/ShiftButtons"]
anims/Idle = SubResource( 3 )
anims/Select = SubResource( 4 )

[node name="Page" type="Label" parent="UI"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 53.0
margin_top = 255.0
margin_right = 130.0
margin_bottom = 266.0
theme = ExtResource( 15 )
text = "Page x of z"
align = 1

[node name="TeamName" type="Sprite" parent="UI"]
script = ExtResource( 38 )

[node name="LineEdit" type="LineEdit" parent="UI/TeamName"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 293.0
margin_top = 7.0
margin_right = 408.0
margin_bottom = 18.0
mouse_filter = 2
theme = ExtResource( 15 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Team 1"
max_length = 18
caret_blink = true
caret_blink_speed = 0.2

[node name="Slots" type="Node2D" parent="UI"]
position = Vector2( 303, 43 )

[node name="MedalSlot" type="Sprite" parent="UI/Slots"]
script = ExtResource( 4 )

[node name="MedalSlot2" type="Sprite" parent="UI/Slots"]
position = Vector2( 45, 0 )
script = ExtResource( 4 )

[node name="MedalSlot3" type="Sprite" parent="UI/Slots"]
position = Vector2( 82, 0 )
script = ExtResource( 4 )

[node name="MedalSlot4" type="Sprite" parent="UI/Slots"]
position = Vector2( 132, 0 )
script = ExtResource( 4 )

[node name="MedalSlot5" type="Sprite" parent="UI/Slots"]
position = Vector2( 168, 0 )
script = ExtResource( 4 )

[node name="Houses" type="Node2D" parent="UI"]
position = Vector2( 271, 71 )

[node name="Medals" type="Node2D" parent="UI"]

[node name="Sort" type="Node2D" parent="UI"]
position = Vector2( 312, 243 )

[node name="Index" type="Sprite" parent="UI/Sort"]
texture = ExtResource( 17 )
script = ExtResource( 27 )

[node name="Name" type="Sprite" parent="UI/Sort"]
position = Vector2( 47, 0 )
texture = ExtResource( 21 )
script = ExtResource( 27 )

[node name="LP" type="Sprite" parent="UI/Sort"]
position = Vector2( 94, 0 )
texture = ExtResource( 20 )
script = ExtResource( 27 )

[node name="Element" type="Sprite" parent="UI/Sort"]
position = Vector2( 141, 0 )
texture = ExtResource( 22 )
script = ExtResource( 27 )

[node name="Type" type="Sprite" parent="UI/Sort"]
position = Vector2( 0, 13 )
texture = ExtResource( 24 )
script = ExtResource( 27 )

[node name="Size" type="Sprite" parent="UI/Sort"]
position = Vector2( 47, 13 )
texture = ExtResource( 23 )
script = ExtResource( 27 )

[node name="Support" type="Sprite" parent="UI/Sort"]
position = Vector2( 94, 13 )
texture = ExtResource( 26 )
script = ExtResource( 27 )

[node name="TotalFP" type="Sprite" parent="UI/Sort"]
position = Vector2( 141, 13 )
texture = ExtResource( 25 )
script = ExtResource( 27 )

[node name="Attack" type="Sprite" parent="UI/Sort"]
position = Vector2( 0, 26 )
texture = ExtResource( 35 )
script = ExtResource( 27 )

[node name="Defense" type="Sprite" parent="UI/Sort"]
position = Vector2( 47, 26 )
texture = ExtResource( 34 )
script = ExtResource( 27 )

[node name="Accuracy" type="Sprite" parent="UI/Sort"]
position = Vector2( 94, 26 )
texture = ExtResource( 36 )
script = ExtResource( 27 )

[node name="Evasion" type="Sprite" parent="UI/Sort"]
position = Vector2( 141, 26 )
texture = ExtResource( 37 )
script = ExtResource( 27 )

[node name="BottomRow" type="Node2D" parent="UI"]
position = Vector2( 93, 291 )

[node name="Clear" type="Sprite" parent="UI/BottomRow"]
position = Vector2( 224, 0 )
texture = ExtResource( 31 )
script = ExtResource( 39 )

[node name="Redo" type="Sprite" parent="UI/BottomRow"]
position = Vector2( 185, 0 )
texture = ExtResource( 19 )
script = ExtResource( 39 )

[node name="Undo" type="Sprite" parent="UI/BottomRow"]
position = Vector2( 146, 0 )
texture = ExtResource( 29 )
script = ExtResource( 39 )

[node name="Load" type="Sprite" parent="UI/BottomRow"]
position = Vector2( -1, 0 )
texture = ExtResource( 32 )
script = ExtResource( 39 )

[node name="Save" type="Sprite" parent="UI/BottomRow"]
position = Vector2( 84, 0 )
texture = ExtResource( 33 )
script = ExtResource( 39 )

[node name="Back" type="Sprite" parent="UI/BottomRow"]
position = Vector2( 286, 0 )
texture = ExtResource( 30 )
script = ExtResource( 39 )
operative = false

[node name="Ok" type="Sprite" parent="UI/BottomRow"]
position = Vector2( 371, 0 )
texture = ExtResource( 28 )
script = ExtResource( 39 )

[node name="Menu" type="Node2D" parent="UI"]

[connection signal="new_vivosaur_focused" from="UI" to="VivoView" method="push_vivosaur"]
[connection signal="slots_updated" from="UI" to="." method="_on_UI_slots_updated"]
[connection signal="selected" from="UI/ShiftButtons/ShiftLeft" to="UI" method="shift_button"]
[connection signal="selected" from="UI/ShiftButtons/ShiftLeft" to="UI/ShiftButtons" method="_on_ShiftLeft_selected"]
[connection signal="selected" from="UI/ShiftButtons/ShiftRight" to="UI" method="shift_button"]
[connection signal="selected" from="UI/ShiftButtons/ShiftRight" to="UI/ShiftButtons" method="_on_ShiftRight_selected"]
[connection signal="animation_finished" from="UI/ShiftButtons/AniLeft" to="UI/ShiftButtons" method="_on_AniLeft_animation_finished"]
[connection signal="animation_finished" from="UI/ShiftButtons/AniRight" to="UI/ShiftButtons" method="_on_AniRight_animation_finished"]
[connection signal="selected" from="UI/Sort/Index" to="UI" method="_on_SortButton_selected"]
[connection signal="selected" from="UI/Sort/Name" to="UI" method="_on_SortButton_selected"]
[connection signal="selected" from="UI/Sort/LP" to="UI" method="_on_SortButton_selected"]
[connection signal="selected" from="UI/Sort/Element" to="UI" method="_on_SortButton_selected"]
[connection signal="selected" from="UI/Sort/Type" to="UI" method="_on_SortButton_selected"]
[connection signal="selected" from="UI/Sort/Size" to="UI" method="_on_SortButton_selected"]
[connection signal="selected" from="UI/Sort/Support" to="UI" method="_on_SortButton_selected"]
[connection signal="selected" from="UI/Sort/TotalFP" to="UI" method="_on_SortButton_selected"]
[connection signal="selected" from="UI/Sort/Attack" to="UI" method="_on_SortButton_selected"]
[connection signal="selected" from="UI/Sort/Defense" to="UI" method="_on_SortButton_selected"]
[connection signal="selected" from="UI/Sort/Accuracy" to="UI" method="_on_SortButton_selected"]
[connection signal="selected" from="UI/Sort/Evasion" to="UI" method="_on_SortButton_selected"]
[connection signal="selected" from="UI/BottomRow/Clear" to="UI" method="_on_Clear_selected"]
[connection signal="selected" from="UI/BottomRow/Redo" to="UI" method="_on_Redo_selected"]
[connection signal="selected" from="UI/BottomRow/Undo" to="UI" method="_on_Undo_selected"]
[connection signal="selected" from="UI/BottomRow/Load" to="UI" method="_on_Load_selected"]
[connection signal="selected" from="UI/BottomRow/Save" to="." method="_on_Save_selected"]
[connection signal="selected" from="UI/BottomRow/Ok" to="." method="_on_Ok_selected"]
